part2/backend/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ruby-be
  namespace: ruby-be
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ruby-be
  template:
    metadata:
      labels:
        app: ruby-be
    spec:
      containers:
        - name: ruby-be
          image: thaddavis/ruby-docker:v22
          ports:
            - containerPort: 3000
