part2/backend/pg-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: pg-db
  name: pg-db-service
spec:
  type: ClusterIP
  selector:
    app: pg-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
