part2/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ruby-be
  name: ruby-be-service
spec:
  type: NodePort
  selector:
    app: ruby-be
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
